--- a/public/css/slide.css
+++ b/public/css/slide.css
@@ -1,4 +1,7 @@
 
+	@import '~/@fortawesome/fontawesome-free/css/all.min.css';
+	@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;600;700&display=swap');
+	
 	.slider {
     	background: white;
     	height: 250px;
