--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,9 +1,9 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;600;700&display=swap');
-
+ */
 
 
 
